# 2024_CIRED

./: .env  .gitignore  .pre-commit-config.yaml  HostingCapacity.ipynb  LICENSE.md  README.md  pyproject.toml
Article/Figures/: CIRED_PQU.tex  European_Shunt_Line.tex  Every_Projections.tex  Makefile  Preambule.tex
data/: PV_Profile_PVGIS_1.csv
